# DUAL_ARM_CONTROL

./: 2024-08-15-15-36-48.bag  delta_circle.txt  delta_width.txt  desk.stl  extract.py  extract_batch.py  goal_width.txt  goal_width_record.xml  joint_value.txt  log.txt  output.txt  sig_analyze.py  standard.txt  vision.py  x_2024-08-13_23-13-52.txt  x_2024-08-13_23-22-08.txt  x_2024-08-13_23-29-08.txt  x_2024-08-13_23-46-46.txt  x_2024-08-13_23-51-45.txt  x_2024-08-14_14-50-01.txt  x_2024-08-14_14-54-00.txt  x_2024-08-14_14-57-17.txt  x_2024-08-14_15-24-49.txt  x_2024-08-14_15-34-03.txt  x_2024-08-14_16-36-21.txt  x_2024-08-14_19-12-06.txt  x_2024-08-14_19-23-22.txt  x_2024-08-14_19-46-25.txt  x_2024-08-14_21-17-01.txt  x_2024-08-14_21-26-42.txt  x_2024-08-14_21-38-06.txt  x_2024-08-14_21-41-07.txt  x_2024-08-14_22-16-17.txt  x_2024-08-14_22-23-28.txt  x_2024-08-14_22-25-10.txt  x_2024-08-14_23-14-36.txt  x_2024-08-14_23-34-23.txt  x_2024-08-14_23-35-58.txt  x_2024-08-14_23-39-07.txt  x_2024-08-15_00-05-40.txt  (+135 more)
devel/: .catkin  .rosinstall
rosbag_record/: dutou_1.bag  dutou_10.bag  dutou_2.bag  dutou_3.bag  dutou_4.bag  dutou_5.bag  dutou_6.bag  dutou_7.bag  dutou_8.bag  dutou_9.bag  m6_0_2.bag  m6_0_2.txt  santong_1.bag  santong_10.bag  santong_11.bag  santong_12.bag  santong_13.bag  santong_14.bag  santong_15.bag  santong_16.bag  santong_2.bag  santong_3.bag  santong_4.bag  santong_5.bag  santong_6.bag  santong_7.bag  santong_8.bag  santong_9.bag  yuanzhu_1.bag  yuanzhu_2.bag
rosbag_record/current/: base1_0.bag  base1_1.bag  base_1.bag  current_1.bag  current_width22_1.bag  current_width22_1_2.bag  current_width22_2.bag  current_width22_2_1.bag  current_width22_2_2.bag  current_width22_3.bag  current_width22_3_1.bag  current_width22_4.bag  current_width22_4_1.bag  current_width22_5.bag  current_width33_1.bag  current_width33_2.bag  current_width33_3.bag  current_width33_4.bag  current_width33_5.bag  current_width44_1.bag  current_width44_2.bag  current_width44_3.bag  current_width44_4.bag  current_width44_5.bag  current_width5_1.bag  current_width5_1_1.bag  current_width5_1_3.bag  current_width5_2.bag  current_width5_2_1.bag  current_width5_2_2.bag  current_width5_3.bag  current_width5_3_1.bag  current_width5_3_2.bag  current_width5_4.bag  current_width5_4_1.bag  current_width5_5.bag  current_width5_5_1.bag  current_width_1.bag  currrent_width2_1.bag  currrent_width2_2.bag  (+21 more)
rosbag_record/current_0928/: base_0.bag  base_1.bag  base_2.bag  base_3.bag  base_new_0.bag  base_new_1.bag  base_new_2.bag  base_new_3.bag  base_new_4.bag  base_yuzhi_10_4.bag  base_yuzhi_5_6.bag  base_yuzhi_7_7.bag  base_yuzhi_7_8.bag  base_yuzhi_8_5.bag  compare_1.bag  compare_2.bag  compare_3.bag  current_10_1.bag  current_10_2.bag  current_10_3.bag  current_10_4.bag  current_10_5.bag  current_110_1.bag  current_110_2.bag  current_110_3.bag  current_110_4.bag  current_110_5.bag  current_30_2.bag  current_30_3.bag  current_30_4.bag  current_30_5.bag  current_50_1.bag  current_50_2.bag  current_50_3.bag  current_50_4.bag  current_50_5.bag  current_70_1.bag  current_70_2.bag  current_70_3.bag  current_70_4.bag  (+11 more)
rosbag_record/current_0928_transferred/: base_0_current.txt  base_0_width.txt  base_1_current.txt  base_1_width.txt  base_2_current.txt  base_2_width.txt  base_3_current.txt  base_3_width.txt  base_new_0_current.txt  base_new_0_width.txt  base_new_1_current.txt  base_new_1_width.txt  base_new_2_current.txt  base_new_2_width.txt  base_new_3_current.txt  base_new_3_width.txt  base_new_4_current.txt  base_new_4_width.txt  base_yuzhi_10_4_current.txt  base_yuzhi_10_4_width.txt  base_yuzhi_5_6_current.txt  base_yuzhi_5_6_width.txt  base_yuzhi_7_7_current.txt  base_yuzhi_7_7_width.txt  base_yuzhi_7_8_current.txt  base_yuzhi_7_8_width.txt  base_yuzhi_8_5_current.txt  base_yuzhi_8_5_width.txt  compare_1_current.txt  compare_1_width.txt  compare_2_current.txt  compare_2_width.txt  compare_3_current.txt  compare_3_width.txt  current_10_1_current.txt  current_10_1_width.txt  current_10_2_current.txt  current_10_2_width.txt  current_10_3_current.txt  current_10_3_width.txt  (+62 more)
rosbag_record/current_obj/: liangtong_0.bag  luomu_0.bag  luosi_0.bag  santong_0.bag  shoubin_0.bag
rosbag_record/current_obj_trans/: liangtong_0_current.txt  liangtong_0_width.txt  luomu_0_current.txt  luomu_0_width.txt  (+6 more)
src/real_robot_control/: CMakeLists.txt  package.xml
src/real_robot_control/include/real_robot_control/: JAKAZuRobot.h  jkerr.h  jktypes.h  left_robot_control.h  right_robot_control.h  screwing_tool.h  servo_motor_function.h
src/real_robot_control/launch/: delta_circle.txt  joint_value.txt  left_robot_planning.launch  left_robot_planning.sh  right_robot_assembly.launch  right_robot_assembly.sh  screw_mouth.launch  standard.txt  start_sim_grasp.launch  start_sim_grasp.sh  test.launch
src/real_robot_control/msg/: current_pub.msg  force_pos_pub.msg  gripper.msg  ori_adj_rec.msg  orientation_pub.msg  pose.msg  pose_pub.msg  robot_pos_pub.msg  width_pub.msg
src/real_robot_control/scripts/: cable_assembly_planning.py  calcu_orientation.py  capture_pointcloud.py  code_test.py  generate_grasping_pose.py  grasp_planning.py  grasp_planning_sim.py  gripper_close.py  gripper_open.py  handover_test.py  modbus_test.py  pub_test.py  ransac_icp.py  sleep.py  sub_test.py  tips_planning.py  utils.py
src/real_robot_control/scripts/grasp_detection/pointcloud/: 11.asc  Alan_wrench.pcd  bolt_3score.pcd  bolt_3score1.pcd  circle_bolt.pcd  desk.pcd  desk1.pcd  gripper.pcd  gripper.ply  handle.pcd  m12-20六角头.stl  m12-螺母.stl  m12_bolt.pcd  three_3score.pcd  三通-3分.stl  六边形螺母1分.stl  六边形螺母3分.stl  双头螺柱1分.stl  双头螺柱2分.stl  双头螺柱3分.stl  弯头2分.stl  手柄.stl  扳手.stl  环形螺钉m5.stl  环形螺钉m6.stl
src/real_robot_control/src/: code_test.cpp  left_or_right_assembly.cpp  left_or_right_disassembly.cpp  left_robot_control.cpp  motion_planning.cpp  move_out.cpp  right_robot_control.cpp  robot_connet_test.cpp  screwing_tool.cpp  servo_motor_function.cpp  task_control_screw.cpp  temp.cpp
src/real_robot_control/srv/: leftrobotsrv.srv  screwsrv.srv
(+1740 files in other folders)
